# Crypto-server

./: .coverage  .dockerignore  ADMIN_DASHBOARD_CUTOVER.md  README.md  RENDER_DEPLOY_PLANITT.md  START_HERE.md  TRADING_STRATEGIES.md  docker-compose.planitt.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
apps/planitt-admin/: README.md
config/: constants.py  crypto_list.py  settings.py
docker/: Dockerfile  docker-compose.yml  prometheus.yml
scripts/: create_db.sh  init_db.py  run_server.py  train_local_llm.py
src/: __init__.py
src/api/: __init__.py  server.py
src/api/middleware/: internal_api_key.py
src/api/routes/: news.py  signals.py
src/data/: __init__.py  binance_client.py  data_fetcher.py  models.py
src/database/: __init__.py  db.py  models.py
src/indicators/: __init__.py  adx.py  atr.py  base.py  bollinger_bands.py  candlestick_patterns.py  cci.py  ema.py  fibonacci.py  heikin_ashi.py  ichimoku.py  macd.py  obv.py  pivot_points.py  rsi.py  sma.py  stochastic.py  supertrend.py  vwap.py  williams_r.py
src/llm/: __init__.py  agent.py  context.py  transformer_agent.py
src/monitoring/: __init__.py  logger.py
src/news/: fetcher.py
src/planitt/: __init__.py  confluence.py  processor.py  schemas.py  targets.py
src/risk/: risk_manager.py
src/signals/: __init__.py  engine.py  market_regime.py  signal.py
src/utils/: decorators.py  formatters.py  helpers.py  validators.py
static/: index.html
tests/: test_candlestick_patterns.py  test_confluence_strategy_patterns.py  test_planitt_confluence_patterns.py
(+19 files in other folders)
